# Shot_rulet

./: README.md  main.py  pyproject.toml  requirements.txt
Assets/data/: eng.lang  esp.lang  ge.lang  settings.cfg
Assets/lib/: class_sr.py  game.py
Assets/textures/dealer/: Dealer_st_normal.pdn
Assets/textures/dealer/hands/: Dealer_st_left_hand_normal.pdn  Dealer_st_left_hand_rest.pdn  Dealer_st_right_hand_normal.pdn  Dealer_st_right_hand_rest.pdn
Assets/textures/scenario/: Scene_5.pdn  s2.pdn  s3.pdn
Assets/textures/shotgun/: shotgun_h_st_player_1.pdn  shotgun_h_st_player_2.pdn  shotgun_h_st_player_3.pdn  shotgun_h_st_player_pump.pdn  shotgun_h_st_player_pump_3.pdn  shotgun_table.pdn
anim/: Dealer_states_frames.animframe
lib/: anim_fram.py  commands.py  dealer_ai.py  events_.py  game.py  general_func.py  general_vars.py  items.py  load.py  music_manager.py  sound_manager.py  ui_elements.py  ui_windows.py
pts/: ps_air_dust.pts  template.pts
